# pvr

./: AUTHORS  ChangeLog  README  TODO  asker-tui.sh  asker.sh  autobuild.sh  config.h.in  configure.ac  pvr.spec  pvr.xml
src/: Makefile.am  devwatch.c  gtk-selector.c  gtk-vncviewer.c  mountutils.c  utils.c  vmrunner.c  vmrunner.h  vncviewer-gtk.c  xml.c
